--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,15 @@
 body {
   background-color: blue;
-  overflow: hidden;
+/*  overflow: hidden; */
 }
 
-.borderedPanel {
+#myColumn {
   border-color: black;
   border-width: 5px;
   border-style: solid;
   border-radius: 10px;
+  background-color: white;
+  margin: 15px;
 }
 
 .img-centered {
