--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,9 @@
 body {
   background-color: blue;
-/*  overflow: hidden; */
+  overflow: hidden;
 }
 
-#myColumn {
+.goodColumn {
   border-color: black;
   border-width: 5px;
   border-style: solid;
